09_arquivo_binario/EA4-script-publico/Resultados/MatheusZortea/main/result_compilation.txt
main.c:3:9: error: #include expects "FILENAME" or <FILENAME>
    3 | #include
      |         ^
